# dat

./: .datconfig  .datignore  .editorconfig  .gitattributes  .gitignore  COMMERCIAL.md  LICENSE  LICENSE-COMMERCIAL  Makefile  NOTICE  README.md  conftest.py  dat  emergency-pyproject-fix.sh  emergency-toml-fix.sh  install.sh  install_deps.sh  pyproject.toml  pyproject.toml.corrupted  requirements-dev.txt  requirements.txt  safe-linting-fix.sh  snapshot.md  ultimate-one-command-fix.sh
docs/: ABOUT.md  CHANGELOG.md  INSTILLATION.md  ROADMAP.md  TROUBLESHOOTING.md  USAGE.md  VERSION_HISTORY.md  changelog.md  index.md  install.md
scripts/: bootstrap.sh  install.sh  read_version.py
src/dat/: __init__.py  cli.py  pdf.py  report.py  utils.py
src/dat/integration/: __init__.py  audit.py  lrc.py  signing.py
src/dat/logging/: audit.py
src/dat/pdf/: __init__.py  report.py
src/dat/rules/: __init__.py  engine.py  rules.py
src/dat/scanner/: __init__.py  core.py  scanner.py  sync.py
tests/: __main__.py  conftest.py  test_cli.py  test_core.py  test_integration_lrc.py  test_pdf.py  test_report.py  test_scanner.py
tools/: dat2lrc.py
