[project]
name = "outervoid-dat"
version = "3.0.0"
description = "Dev Audit Tool - Comprehensive security and dependency audit tool for developers"
authors = [
    {name = "Outer Void Team, Justadudeinspace", email = "outervoid.blux@gmail.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["security", "audit", "dependencies", "vulnerability", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "requests>=2.25.0",
    "colorama>=0.4.4",
    "packaging>=20.0",
    "pyyaml>=5.4.0",
    "rich>=10.0.0",
    "typer>=0.20.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "mypy>=1.0.0",
]
pdf = [
    "reportlab>=3.6.0",
]
security = [
    "bandit>=1.7.0",
    "safety>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Outer-Void/dat"
Documentation = "https://github.com/Outer-Void/dat/docs"
Repository = "https://github.com/Outer-Void/dat"
Changelog = "https://github.com/Outer-Void/dat/docs/CHANGELOG.md"

[project.scripts]
dat = "dat.cli:main"

[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = [
    "LICENSE",
    "LICENSE-APACHE",
    "LICENSE-COMMERCIAL",
    "NOTICE",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["dat*"]

[tool.ruff]
target-version = "py39"
line-length = 88
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade (modernize Python code)
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PL",    # Pylint
    "PERF",  # Perflint
    "RUF",   # Ruff-specific rules
]

ignore = [
    "E501",    # Line too long (handled by formatter)
    "B008",    # Do not perform function calls in argument defaults
    "C901",    # Function is too complex
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["S101", "ARG", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["dat"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 72

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--cov=src/dat",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "colorama.*",
    "rich.*",
    "yaml.*",
    "typer.*",
]
ignore_missing_imports = true
